<resources>
    <string name="app_name">Yeye Live</string>
    <string name="facebook_app_id">1735313646749357</string>
    <string name="facebook_app_name">Yeye Live</string>
    <string name="empty_header_str" />
    <string name="login_id_hint">Account/Phone</string>
    <string name="login_password_hint">Password</string>
    <string name="login_title">Login</string>
    <string name="login_quick">Quick Login</string>
    <string name="login_forgot_pwd">Forget Password?</string>
    <string name="title_activity_select_address">Region</string>
    <string name="login_suc">Login Successfully</string>
    <string name="login_faild">Login Failed</string>
    <string name="change_login_type">Login Option</string>
    <string name="user_sex">Gender</string>
    <string name="user_male">Male</string>
    <string name="user_female">Female</string>
    <string name="user_name">Nickname</string>
    <string name="user_name_hint">Nickname</string>
    <string name="user_sex_prompt">Gender CAN NOT change after choose</string>
    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="upload_photo_error">Photo Upload Failed</string>
    <string name="phone_login_input_phone">Phone Number</string>
    <string name="phone_login_input_code">Verify Code</string>
    <string name="phone_login_send_code">Send Verify Code</string>
    <string name="phone_login_retry_send" formatted="false">Resend(%s)</string>
    <string name="phone_login_title">Login By Phone</string>
    <string name="phone_login_country_area">Country</string>
    <string name="phone_login_next_step">Next</string>
    <string name="phone_login_default_country">Malaysia</string>
    <string name="phone_login_default_country_area_num">60</string>
    <string name="phone_login_illegal_phone">Invalid Phone Number</string>
    <string name="phone_login_area_prefix">+</string>
    <string name="select_country">Select Country</string>
    <string name="select_country_search">Search</string>
    <string name="button_submit">Submit</string>
    <string name="button_editor">Edit</string>
    <string name="button_next">Next</string>
    <string name="button_resend">Resend</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_release">Publish</string>
    <string name="button_closed">Back</string>
    <string name="button_close">Close</string>
    <string name="button_more">More</string>
    <string name="button_complete">Finish</string>
    <string name="button_myleceived">History</string>
    <string name="button_send">Send</string>
    <string name="button_downloads">Direct download</string>
    <string name="button_google_play">Google Play</string>
    <string name="button_cancal_up">keep old version</string>
    <string name="button_finish">Finish</string>
    <string name="button_new_user">Register</string>
    <string name="button_login">Login</string>
    <string name="button_private_chat">Private Chat</string>
    <string name="button_top_up">Top Up</string>
    <string name="button_top_up_submit">Confirm Purchase</string>
    <string name="button_large_bar">Large Pack</string>
    <string name="button_save">Save</string>
    <string name="button_yes">Agree</string>
    <string name="button_disagree">Reject</string>
    <string name="button_Reconnection">Reconnect</string>
    <string name="end_live">End live</string>
    <string name="set_network">Set network</string>
    <string name="reply">Reply</string>
    <string name="moment_details">Comment</string>
    <string name="moment">Square</string>
    <string name="comment">Comment</string>
    <string name="people">He/She</string>
    <string name="just">Just Now</string>
    <string name="view_all">View All</string>
    <string name="input_complete">Any Comments?</string>
    <string name="girls">Girl</string>
    <string name="date">Date</string>
    <string name="my_post">My Post</string>
    <string name="input_id">Input ID</string>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="channel_error_title">Connection error</string>
    <string name="ok">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_live_finish">LiveFinishActivity</string>
    <string name="go_in">Loading</string>
    <string name="shareTitle">Yeye Live Share</string>
    <string name="shareDescription" formatted="false">Yeye Live, Live show of talent!</string>
    <string name="success">Success</string>
    <string name="apply_success">Application Done!</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="clear">Clear</string>
    <string name="live_hot">Popular</string>
    <string name="live_follow">Following</string>
    <string name="live_new">New</string>
    <string name="live_hot_default_area">From Yeye Live</string>
    <string name="notify_default_title">New Message</string>
    <string name="notify_default_message">New Message</string>
    <string name="notify_default_ticker">new Massage</string>
    <string name="notify_live_content">%s is on Live now!</string>
    <string name="search_hint">Search User Name or ID</string>
    <string name="search_nick_name">Nickname</string>
    <string name="search_intimacy">Popularity</string>
    <string name="search_fans">Fans</string>
    <string name="search_attention">Follow</string>
    <string name="search_pull_blacklist">Blacklist</string>
    <string name="search_report">Report</string>
    <string name="formatted_1" formatted="false">Send You：%s</string>
    <string name="formatted_2" formatted="false">I am %s Welcome to my Yeye Live!</string>
    <string name="gift_code1012">Your coins is not enough.</string>
    <string name="attention">Following</string>
    <string name="fans">Followed</string>
    <string name="diamond">My Coins</string>
    <string name="Coins" formatted="false">Coins: %s</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="intimacy">Popularity:</string>
    <string name="ID">ID:</string>
    <string name="default_sign">There is no signature from this user.</string>
    <string name="pay_success">Purchase Successfully</string>
    <string name="pay_fail">Purchase Failed</string>
    <string name="pay_cancel">Payment Cancel</string>
    <string name="pay_deny">Payment Rejected</string>
    <string name="pay_unknown">Payment Back</string>
    <string name="pay_error">Payment Error</string>
    <string name="ali_pay">Alipay</string>
    <string name="wx_pay">Wechat Pay</string>
    <string name="choice_amount">Payment Options</string>
    <string name="choice_way">Mode of Payment</string>
    <string name="text_desc">Notice: Please top up under a good network. Before payment done ,please do not proceed any other behavior.</string>
    <string name="userinfo_title">Personal Info</string>
    <string name="userinfo_edit_finish">Done</string>
    <string name="userinfo_user_header">Photo</string>
    <string name="userinfo_user_nickname">Nickname</string>
    <string name="userinfo_user_sign">Signature</string>
    <string name="userinfo_sign_unkonw">To be filled</string>
    <string name="user_info_mail">Email</string>
    <string name="user_info_hint_email">Please input the email address</string>
    <string name="user_info_mail_error">Email format error</string>
    <string name="setting_title">Setting</string>
    <string name="setting_live_notify">Notice of Message</string>
    <string name="setting_video_filter">Turn of Beauty</string>
    <string name="setting_bind_qq">Connect to QQ</string>
    <string name="setting_bind_weixin">Connect to Wechat</string>
    <string name="setting_bind_phone">Link with Phone</string>
    <string name="setting_bind_facebook">Connect to Facebook</string>
    <string name="setting_clear_cache">Clean Cache</string>
    <string name="setting_binded">Connected</string>
    <string name="setting_go_bind">Note Connected</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_about_us">About Us</string>
    <string name="setting_blacklist">Blacklist</string>
    <string name="setting_bind_faild">Connect Failed</string>
    <string name="setting_bind_suc">Connect Successfully</string>
    <string name="setting_clear_cache_dialog">Clear Cache</string>
    <string name="about_title">About Us</string>
    <string name="lisence_hint">Agreement of Broadcasting</string>
    <string name="comp">Angela Technology Co., Limited</string>
    <string name="versionCode">Version</string>
    <string name="about_us_qq">Business Cooperation:Sk_app@hotmail.com</string>
    <string name="about_us_secret_sign">Title: Yeye Live Cooperation</string>
    <string name="lisence_title">User Agreement</string>
    <string name="copyright">\@2016 Angela Technology Co., Limited</string>
    <string name="phone_bind_title">Connect to Phone</string>
    <string name="phone_bind">Connect</string>
    <string name="phone_bind_suc">Phone Connected</string>
    <string name="phone_bind_faild">Phone Connected Failed</string>
    <string name="begin_live_title">Input an attractive title</string>
    <string name="btn_begin_live">Start Live</string>
    <string name="user_focus">Following</string>
    <string name="user_fans">Followed</string>
    <string name="txt_live_time" formatted="false">Live Time：%s</string>
    <string name="live_num">People Viewed</string>
    <string name="new_fans">New Fans</string>
    <string name="live_coin">Coin Acquired</string>
    <string name="back_home">Home Page</string>
    <string name="live_end">Live Show Ended</string>
    <string name="live_end_bg">Background of Live End</string>
    <string name="chatline">Chat</string>
    <string name="share">Share</string>
    <string name="follow">Follow</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="gift">Gift</string>
    <string name="please_input">Please input words</string>
    <string name="send">Send</string>
    <string name="recharge"><![CDATA[Top Up>]]></string>
    <string name="gift_send">Send</string>
    <string name="send_people">To:</string>
    <string name="user_name_input">Invalid Nickname</string>
    <string name="paly_title">Send Ang Pao </string>
    <string name="play_edit_coins">Put Coins</string>
    <string name="play_str">  </string>
    <string name="recharge_coin">Top Up</string>
    <string name="system_red_more_coins">At least 10 coins</string>
    <string name="red_tips_luck">Good Luck</string>
    <string name="zmd_tip1">You are almost become famous</string>
    <string name="zmd_tip2">How to improve Popularity</string>
    <string name="zmd_tip3">Good of popularity</string>
    <string name="zmd_tip4">1. Bring you act cool bring you fly,bring you high high Yeye Live!</string>
    <string name="zmd_tip5">2. Distinguished by Level and Icon</string>
    <string name="zmd_tip6">3. Get the attention in each action</string>
    <string name="zmd_tip7">More privileges are coming!</string>
    <string name="room_hd">Interact with people</string>
    <string name="fans_count">Fans Number</string>
    <string name="see_live">Watch Live Show</string>
    <string name="way_live">Start Live</string>
    <string name="send_gift">Send Gift</string>
    <string name="way_share">Share anything</string>
    <string name="dialog_tips_success">Congratulation, Transaction Success </string>
    <string name="dialog_tips_content">Please Fill Information in Complete at  Me -> My Order</string>
    <string name="dialog_tips_btn"><![CDATA[My Order>>]]></string>
    <string name="express_name">Shipping Company</string>
    <string name="express_num">Tracking Number</string>
    <string name="express_cancel">Not Now</string>
    <string name="express_confirm">Set up Now</string>
</resources>