<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5BCEC4"
    android:clipChildren="false"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:paddingLeft="16dp"
            android:paddingTop="14dp"
            android:src="@drawable/btn_nav_back_w"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/backBtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/search_intimacy"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_user_face"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <!--头像-->
        <ImageView
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_centerInParent="true"
            android:src="@drawable/circular" />

        <com.xj.frescolib.View.FrescoRoundView
            android:id="@+id/user_face"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            fresco:fadeDuration="300"
            fresco:placeholderImage="@drawable/default_face_icon"
            fresco:roundAsCircle="true" />

        <ImageView
            android:layout_width="179dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/bg_fame_num" />

        <TextView
            android:id="@+id/txt_popularity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="99999"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_fame_tips"
        android:gravity="center"
        android:text="@string/zmd_tip1"
        android:textColor="#FF5BCEC4"
        android:textSize="14dp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/zmd_tip2"
        android:textColor="@color/white"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_fame_way_live"
                android:drawablePadding="4dp"
                android:text="@string/way_live"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="7dp"
                android:background="#1AFFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:drawableLeft="@drawable/icon_fame_way_send_gift"
                android:drawablePadding="4dp"
                android:text="@string/send_gift"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="7dp"
                android:background="#1AFFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:drawableLeft="@drawable/icon_fame_way_share"
                android:drawablePadding="4dp"
                android:text="@string/way_share"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="7dp"
                android:background="#1AFFFFFF" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_fame_upgrade_rockets" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical"
            android:paddingRight="20dp"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_fame_way_room_interactive"
                android:drawablePadding="4dp"
                android:text="@string/room_hd"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="7dp"
                android:background="#1AFFFFFF" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:drawableLeft="@drawable/icon_fame_way_fans_num"
                android:drawablePadding="4dp"
                android:text="@string/fans_count"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="7dp"
                android:background="#1AFFFFFF" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:drawableLeft="@drawable/icon_fame_way_see_live"
                android:drawablePadding="4dp"
                android:text="@string/see_live"
                android:textColor="@color/white"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="7dp"
                android:background="#1AFFFFFF" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/bg_fame_content_bottom"
        android:paddingTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/zmd_tip3"
            android:textColor="#FF5BCEC4"
            android:textSize="14dp"
            />
        <TextView
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/zmd_tip4"
            android:textColor="#FF5BCEC4"
            android:textSize="14dp"
            />
        <TextView
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/zmd_tip5"
            android:textColor="#FF5BCEC4"
            android:textSize="14dp"
            />
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/zmd_tip6"
            android:textColor="#FF5BCEC4"
            android:textSize="14dp"
            />
        <TextView
            android:layout_marginTop="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/zmd_tip7"
            android:textColor="#FF5BCEC4"
            android:textSize="14dp"
            />
    </LinearLayout>

</LinearLayout>