<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="277dp"
        android:background="@drawable/circle_coner_bg"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/circle_top_coner"
            android:gravity="center"
            android:minWidth="50dp"
            android:text="@string/paly_title"
            android:textColor="@color/color_FFEA7C"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/circle_exchange_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_coins"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/play_edit_coins"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textColor="@color/color_666666"
                android:textColorHint="@color/color_d9d9d9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/edit_coins"
                android:paddingRight="10dp"
                android:text="@string/play_str"
                android:textColor="@color/color_666666"
                android:textSize="14sp"
                tools:ignore="ObsoleteLayoutParam,RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_exchange_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_context"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/red_tips_luck"
                android:paddingLeft="10dp"
                android:textColor="@color/color_666666"
                android:textColorHint="@color/color_d9d9d9" />

            <TextView
                android:id="@+id/edit_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/edit_coins"
                android:paddingRight="10dp"
                android:text="0/50"
                android:textColor="@color/color_666666"
                android:textSize="14sp"
                tools:ignore="HardcodedText,ObsoleteLayoutParam,RtlHardcoded,RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/coins_str"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/icon_tickets_golds_small"
                android:drawablePadding="4dp"
                android:textColor="@color/color_eecc1b"
                android:textSize="16sp"
                tools:text="20"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/coins_low_tips"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="6dp"
                android:text="@string/system_red_more_coins"
                android:textColor="@color/color_999999"
                android:textSize="14sp"
                android:visibility="invisible"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/recharge_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge_coin"
                android:textColor="@color/color_eecc1b"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_coner_ctl_live_bg"
            android:text="@string/button_confirm"
            android:textColor="@color/color_FFEA7C" />
    </LinearLayout>
</LinearLayout>
